Fix bug where scrolling up and down was possible on mobile devices before the home threeJS camera pan completed

--- a/frontend/sass/pages/_home.scss
+++ b/frontend/sass/pages/_home.scss
@@ -111,19 +111,19 @@
 	&__name-first {
 		@extend %name-font;
 		justify-self: flex-end;
-		transform: translate(-$default-font-size * 50, 0);
+		// transform: translate(-$default-font-size * 50, 0);
 	}
 
 	&__name-last {
 		@extend %name-font;
 		justify-self: flex-start;
-		transform: translate($default-font-size * 50, 0);
+		// transform: translate($default-font-size * 50, 0);
 	}
 
 	&__third-word {
 		font-weight: 900;
 		grid-column: 1/-1;
-		transform: translate(0, 100vh);
+		// transform: translate(0, 100vh);
 		font-size: $default-font-size * 1.5;
 	}
 
